samples/_failures_safe/1761339350_ecc782_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8268fa34.c: In function ‘main’:
./samples/SAFE/__tmp_8268fa34.c:197:20: error: expected ‘)’ at end of input
  197 |     if (token_count
      |        ~           ^
      |                    )
./samples/SAFE/__tmp_8268fa34.c:197:5: error: expected declaration or statement at end of input
  197 |     if (token_count
      |     ^~
